--- a/Mission_to_Mars.ipynb
+++ b/Mission_to_Mars.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 26,
    "id": "f43cb492-4fdf-49e7-b81c-002d03138dc5",
    "metadata": {},
    "outputs": [],
@@ -10,12 +10,13 @@
     "#Import Splinter and BeautifulSoup\n",
     "from splinter import Browser\n",
     "from bs4 import BeautifulSoup as soup\n",
-    "from webdriver_manager.chrome import ChromeDriverManager"
+    "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 27,
    "id": "ce6c3713-12ef-41ae-80b2-af5cc18dd01c",
    "metadata": {},
    "outputs": [
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 28,
    "id": "af073bc6-f4c9-4dba-ab2c-a5a6cd306a9a",
    "metadata": {},
    "outputs": [
@@ -49,7 +50,7 @@
        "True"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "id": "371e6039-764d-486b-b287-0cd73e6a8218",
    "metadata": {},
    "outputs": [],
@@ -76,17 +77,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "id": "d53fa361-7644-47d9-b0ac-c7295f7890f3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<div class=\"content_title\">NASA's Perseverance Rover Bringing 3D-Printed Metal Parts to Mars</div>"
+       "<div class=\"content_title\">NASA's Mars 2020 Rover Completes Its First Drive</div>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,17 +98,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "id": "1e473a95-9411-4683-8e42-822e5748d713",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"NASA's Perseverance Rover Bringing 3D-Printed Metal Parts to Mars\""
+       "\"NASA's Mars 2020 Rover Completes Its First Drive\""
       ]
      },
-     "execution_count": 7,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,17 +121,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "id": "09b5b18a-b388-4940-b234-0736c08d60fb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"For hobbyists and makers, 3D printing expands creative possibilities; for specialized engineers, it's also key to next-generation spacecraft design.\""
+       "'In a 10-plus-hour marathon, the rover steered, turned and drove in 3-foot (1-meter) increments over small ramps.'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,9 +143,230 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "aea7f32a-7d47-497e-9426-cbcbd3faa6e5",
+   "metadata": {},
+   "source": [
+    "#### Featured Images ####"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "2868ce2f-56ad-4127-8009-696780271878",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Visit URL\n",
+    "url = 'https://spaceimages-mars.com'\n",
+    "browser.visit(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "3fbc19e4-ff5e-42ee-bae4-8e1d432a7e3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Find and click the full image button\n",
+    "full_image_elem = browser.find_by_tag('button')[1]\n",
+    "full_image_elem.click()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "08a4c010-34b8-472c-b9c8-3d1d96331389",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Parse the resulting html with soup\n",
+    "html = browser.html\n",
+    "img_soup = soup(html, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "7364366e-b410-443a-b0f2-b2549ed152ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'image/featured/mars3.jpg'"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Find the relative image url\n",
+    "img_url_rel = img_soup.find('img', class_='fancybox-image').get('src')\n",
+    "img_url_rel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "28797974-bbc2-4e2b-bc40-013997192238",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://spaceimages-mars.com/image/featured/mars3.jpg'"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Use the base URL to create an absolute URL\n",
+    "img_url = f'https://spaceimages-mars.com/{img_url_rel}'\n",
+    "img_url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "fff94f16-9b82-434b-b1f4-6b50c1704228",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Mars</th>\n",
+       "      <th>Earth</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>description</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Mars - Earth Comparison</th>\n",
+       "      <td>Mars</td>\n",
+       "      <td>Earth</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Diameter:</th>\n",
+       "      <td>6,779 km</td>\n",
+       "      <td>12,742 km</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Mass:</th>\n",
+       "      <td>6.39 × 10^23 kg</td>\n",
+       "      <td>5.97 × 10^24 kg</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Moons:</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Distance from Sun:</th>\n",
+       "      <td>227,943,824 km</td>\n",
+       "      <td>149,598,262 km</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Length of Year:</th>\n",
+       "      <td>687 Earth days</td>\n",
+       "      <td>365.24 days</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Temperature:</th>\n",
+       "      <td>-87 to -5 °C</td>\n",
+       "      <td>-88 to 58°C</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                    Mars            Earth\n",
+       "description                                              \n",
+       "Mars - Earth Comparison             Mars            Earth\n",
+       "Diameter:                       6,779 km        12,742 km\n",
+       "Mass:                    6.39 × 10^23 kg  5.97 × 10^24 kg\n",
+       "Moons:                                 2                1\n",
+       "Distance from Sun:        227,943,824 km   149,598,262 km\n",
+       "Length of Year:           687 Earth days      365.24 days\n",
+       "Temperature:                -87 to -5 °C      -88 to 58°C"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_html('https://galaxyfacts-mars.com')[0]\n",
+    "df.columns = ['description', 'Mars', 'Earth']\n",
+    "df.set_index('description', inplace = True)\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "7df80dec-866d-42d4-b589-81d214c03246",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Mars</th>\\n      <th>Earth</th>\\n    </tr>\\n    <tr>\\n      <th>description</th>\\n      <th></th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Mars - Earth Comparison</th>\\n      <td>Mars</td>\\n      <td>Earth</td>\\n    </tr>\\n    <tr>\\n      <th>Diameter:</th>\\n      <td>6,779 km</td>\\n      <td>12,742 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.39 × 10^23 kg</td>\\n      <td>5.97 × 10^24 kg</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2</td>\\n      <td>1</td>\\n    </tr>\\n    <tr>\\n      <th>Distance from Sun:</th>\\n      <td>227,943,824 km</td>\\n      <td>149,598,262 km</td>\\n    </tr>\\n    <tr>\\n      <th>Length of Year:</th>\\n      <td>687 Earth days</td>\\n      <td>365.24 days</td>\\n    </tr>\\n    <tr>\\n      <th>Temperature:</th>\\n      <td>-87 to -5 °C</td>\\n      <td>-88 to 58°C</td>\\n    </tr>\\n  </tbody>\\n</table>'"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.to_html()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "c0088327-47b9-4319-98b8-56c8a54d6ba6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "browser.quit()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cb12dc0a-79bd-488d-8d1a-97d82f67d1d2",
+   "id": "35d4f5f7-e1c9-439a-a2d2-aaf384ec405c",
    "metadata": {},
    "outputs": [],
    "source": []
