--- a/Mission_to_Mars_Challenge.ipynb
+++ b/Mission_to_Mars_Challenge.ipynb
@@ -389,7 +389,7 @@
     "# 3. Write code to retrieve the image urls and titles for each hemisphere.\n",
     "links = browser.find_by_css('a.product-item img')\n",
     "\n",
-    "for i in range(len(hemilinks)):\n",
+    "for i in range(len(links)):\n",
     "    #create an empty dictionary to store image and title for each hemisphere\n",
     "    hemisphere = {}\n",
     "    # find img and click through to next page\n",
@@ -406,20 +406,7 @@
     "    \n",
     "    #navigate back to the start page\n",
     "    browser.back()\n",
-    "    \n",
-    "    \n",
-    "# for i in range(4):\n",
-    "#     #create empty dictionary\n",
-    "#     hemispheres = {}\n",
-    "#     browser.find_by_css('a.product-item h3')[i].click()\n",
-    "#     element = browser.find_link_by_text('Sample').first\n",
-    "#     img_url = element['href']\n",
-    "#     title = browser.find_by_css(\"h2.title\").text\n",
-    "#     hemispheres[\"img_url\"] = img_url\n",
-    "#     hemispheres[\"title\"] = title\n",
-    "#     hemisphere_image_urls.append(hemispheres)\n",
-    "#     browser.back()\n",
-    "#len(hemilinks)"
+    "    "
    ]
   },
   {
